methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: type int
def move(nbPas:int,avant:boolean){
               ^MethodsArgs:2: error: not found: type boolean
def move(nbPas:int,avant:boolean){
                         ^MethodsArgs:4: error: not found: value north
    if (getDirection()==north){
                        ^